More secure and robust form behaviour

--- a/frontend.html
+++ b/frontend.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Selfish</title>
 
-<form id="run">
+<form id="params">
   <dl>
     <dt>Email
     <dd><input id="email" type="text" size="40" placeholder="yourname@example.com">
@@ -16,7 +16,7 @@
     <dd><input id="password" type="password" size="40" placeholder="Strong password for your key!">
   </dl>
 
-  <button type="submit">Run</button>
+  <button id="run" type="submit">Run</button>
 </form>
 
 <div id="responses"></div>
